# he-tool

./: .gitignore  Dockerfile  README.md
.github/workflows/: backend-ci.yml
backend/: README.md  flask.config.json  main.py  pyproject.toml
backend/migrations/versions/: 776494281371_.py
backend/src/human_evaluation_tool/: __init__.py  auth.py  utils.py
backend/src/human_evaluation_tool/models/: __init__.py  annotation.py  annotation_system.py  bitext.py  document.py  evaluation.py  marking.py  system.py  user.py
backend/src/human_evaluation_tool/resources/: __init__.py  annotation.py  bitext.py  document.py  evaluation.py  marking.py  system.py  user.py
backend/tests/: __init__.py  conftest.py  test_annotations.py  test_app.py  test_auth.py  test_bitexts.py  test_documents.py  test_evaluations.py  test_init_config.py  test_markings.py  test_systems.py  test_users.py
docs/backend/: api-flows.md  architecture.md  domain-model.md  testing-and-quality.md
docs/rfcs/: 0000-template.md  0001-backend-quality-overhaul.md
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.js
frontend/public/: viewer.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AppLayout.jsx  ClickOutsideListener.jsx  ErrorCategorySelector.jsx  ErrorSeveritySelector.jsx  LanguageSelector.jsx  Marking.jsx  MarkingItem.jsx  MarkingPopup.jsx  NavigationBar.jsx  ProtectedRoute.jsx  Spinner.jsx  SpinnerMini.jsx
frontend/src/css/: viewer.css
frontend/src/pages/: About.jsx  Annotate.jsx  EvaluationDetail.jsx  Evaluations.jsx  Login.jsx  NotFound.jsx  Register.jsx  Results.jsx
frontend/src/scss/: _colors.scss  main.scss
frontend/src/services/: apiAnnotations.js  apiAuth.js  (+5 more)
public/: index.html
public/assets/: index-0f1c9870.js  index-3aa14792.css
(+13 files in other folders)
