[tool.poetry]
name = "human-evaluation-tool"
version = "1.0.0"
description = "A backend server for the Human Evaluation Tool built using Flask"
authors = ["Giovanni G. De Giacomo <giovanni@yaraku.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
bcrypt = "~4.1"
flask = "~2.3"
flask-bcrypt = "~1.0"
flask-jwt-extended = "~4.6"
flask-migrate = "~4.0"
flask-sqlalchemy = "~3.1"
gunicorn = "~21.2"
psycopg2 = "~2.9"
pyjwt = "~2.8"
python = ">=3.10,<4.0"
python-dotenv = "~1.0"
werkzeug = "~3.0"

[tool.poetry.group.dev.dependencies]
black = "~23.11"
flake8 = "~6.1"
mypy = "^1.8"
coverage = {extras = ["toml"], version = "^7.4"}
pytest = "^7.4"
pytest-cov = "^4.1"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["human_evaluation_tool"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
